# FewShotX

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
src/FewShotX/: __init__.py  data_loader.py  notebook.py
src/FewShotX/datasets/: econland_corpus.csv  econland_corpus.parquet
src/FewShotX/embeddings/: __init__.py  embed.py
src/FewShotX/scoring/: __init__.py  dictionary.py  eval_plots.py  fewshot.py  zeroshot.py
tutorials/: Dictionary_Tutorial.ipynb  FewShot_Tutorial.ipynb  ZeroShot_Tutorial.ipynb  fewshot.ipynb
