[project]
name = "FewShotX"
version = "0.1.3"
description = "An intuitive package for few-shot text classification, making advanced NLP accessible and efficient."
authors = [
  { name = "Renato Vassallo", email = "renato.vassallo@bse.eu" }
]
readme = "README.md"
requires-python = ">=3.11,<3.12"

dependencies = [
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "sentence-transformers>=4.1.0",
    "spacy>=3.8.5",
    "accelerate>=1.6.0",
    "huggingface-hub[hf-xet]>=0.30.2",
]

[dependency-groups]
dev = [
    "pyarrow>=20.0.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.6",
    "dropbox>=12.0.2",
    "matplotlib>=3.10.1",
    "python-dotenv>=1.1.0",
    "seaborn>=0.13.2",
    "en-core-web-sm"
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.astral-uv.package-data]
FewShotX = ["datasets/*.parquet", "datasets/*.csv"]

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }
