[project]
name = "FewShotX"
version = "0.2.0"
description = "An intuitive package for few-shot text classification, making advanced NLP accessible and efficient."
authors = [
  { name = "Renato Vassallo", email = "renato.vassallo@bse.eu" }
]
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "numpy>=2.2.5",
    "pandas>=2.2.3",

    # NLP stack pinned for SetFit compatibility
    "setfit==1.1.1",
    "sentence-transformers==3.0.1",
    "transformers==4.44.2",
    "datasets==2.21.0",
    "accelerate==0.34.2",
    "huggingface-hub[hf-xet]>=0.24.0,<1.0",
    "spacy>=3.8.5",
    "pdfplumber>=0.11.9",
    "nltk>=3.9.4",
]

[project.urls]
Homepage = "https://github.com/RenatoVassallo/FewShotX"
Repository = "https://github.com/RenatoVassallo/FewShotX"

[dependency-groups]
dev = [
    "pyarrow>=20.0.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.6",
    "dropbox>=12.0.2",
    "matplotlib>=3.10.1",
    "python-dotenv>=1.1.0",
    "rich>=13.9.4",
    "seaborn>=0.13.2",
    "en-core-web-sm",
    "es-core-news-sm",    
    "catboost",
    "statsmodels",
    "openpyxl"
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
FewShotX = ["datasets/*.parquet", "datasets/*.csv"]

[tool.astral-uv.package-data]
FewShotX = ["datasets/*.parquet", "datasets/*.csv"]

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }
es-core-news-sm = { url = "https://github.com/explosion/spacy-models/releases/download/es_core_news_sm-3.8.0/es_core_news_sm-3.8.0-py3-none-any.whl" }
